--- a/nodejsANDjs/index.html
+++ b/nodejsANDjs/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <script type="text/javascript" src="./module.js"></script>
-    <script type="module" src="./zz.js"></script>
+    <script type="module" src="./Async.js"></script>
 </body>
 </html>
